--- a/src/App.css
+++ b/src/App.css
@@ -725,6 +725,12 @@ footer section div a{
   margin-bottom: 13px;
   text-decoration: none;
 }
+footer section div p{
+  font-size: 17px;
+  color: #151A35;
+  margin-bottom: 13px;
+  text-decoration: none;
+}
 footer section .lg{
   width: 15%;
 }
@@ -1599,7 +1605,7 @@ footer section .form .f-form button img{
   margin-bottom: 30px;
 }
 
-.contact .contact-f .c-l a{
+.contact .contact-f .c-l .link{
   width: 90%;
   display: flex;
   align-items: center;
@@ -1608,23 +1614,25 @@ footer section .form .f-form button img{
   /* justify-content: space-between; */
 }
 
-.contact .contact-f .c-l a .con-i{
+
+
+.contact .contact-f .c-l .link .con-i{
   font-size: 24px;
   margin-right: 30px;
   color: #000;
 }
 
-.contact .contact-f .c-l a div{
+.contact .contact-f .c-l .link div{
   width: 90%;
 }
-.contact .contact-f .c-l a div h6{
+.contact .contact-f .c-l .link div h6{
   font-size: 20px;
   margin-bottom: 3px;
   font-weight: 400;
   color: #000;
 }
 
-.contact .contact-f .c-l a div p{
+.contact .contact-f .c-l .link div p{
   font-size: 15px;
   color: #676967;
 }
@@ -1632,7 +1640,7 @@ footer section .form .f-form button img{
 .contact .contact-f .c-l .socials{
   width: 80%;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 .contact .contact-f .c-l .socials a{
@@ -2896,7 +2904,7 @@ margin-bottom: 0;
   .modal .modal-c .batch .div{
     width: 100%;
   }
-  .contact .contact-f .c-l a{
+  .contact .contact-f .c-l .link{
     width: 100%;
   }
   .modal1 .modal1-content{
@@ -3008,6 +3016,10 @@ margin-bottom: 0;
     font-size: 16px;
   }
   footer section div a{
+    font-size: 15px;
+  }
+
+  footer section div p{
     font-size: 15px;
   }
 
