--- a/src/App.css
+++ b/src/App.css
@@ -1148,7 +1148,7 @@ footer section .form .f-form button img{
   margin-bottom: 50px;
   display: flex;
   justify-content: space-between;
-  align-items: start;
+  align-items: flex-start;
 }
 
 .course2 .course2-l{
@@ -2218,11 +2218,11 @@ margin-bottom: 0;
   }
   .course1 .course-r div .price{
     flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
   }
   .course2 .course2-r div .price{
     flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
   }
 
   .enrollment{
@@ -2515,7 +2515,7 @@ margin-bottom: 0;
     top:10vh ;
     z-index: 100;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
     height: 90vh;
     padding-top: 20px;
     transition-duration: 1s;
@@ -2631,7 +2631,7 @@ margin-bottom: 0;
 
 .enrollment .form label{
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
 }
 
 .enrollment .form label p{
